welcome.lessons.welcome.array.array123.Array123.scala.error
array123:2: error: not found: type ==
   int T: int == nums.length
              ^array123:2: error: not found: value int
   int T: int == nums.length
   ^array123:3: error: not found: value T
  for (i <- 0 to T){
                 ^